--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
 
@@ -15,6 +15,7 @@
         <a href ="about.html">About</a>
         <a href ="contact.html">Contact</a>
     </div>
-
+    
+<a>This is the Contact Page</a>
 </body>
 </html>
