--- a/week01-assignment.html
+++ b/week01-assignment.html
@@ -14,6 +14,7 @@
         <a href ="about.html">About</a>
         <a href ="contact.html">Contact</a>
     </div>
+    <a>This is the Home Page</a>
 
     <!-- the <p> below represents a paragraph, it also has a line showing everything between it comes within that paragraph-->
     <p>
