--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
 
@@ -16,5 +16,6 @@
         <a href ="contact.html">Contact</a>
     </div>
 
+    <a>This is the About Page</a>
 </body>
 </html>
